# BasedCharts

./: .clang-format  .clang-tidy  .clang-tidy-exclude  .gitignore  BasedCharts.pro  CMakeLists.txt  LICENSE  README.md
assets/: basedcharts.qrc
assets/icons/: README.md
assets/themes/: README.md
assets/themes/dark/: dark.qrc  style.qss
assets/themes/light/: light.qrc  style.qss
docs/: .gitignore  .latexmkrc  main.tex
docs/sections/: architettura.tex  conclusioni.tex  introduzione.tex
examples/: LineMultipleX.json  LineSingleX.json  ScatterSingleX.json  SplineSingleX.json  bar.json
examples/invalid/: invalidType.json
scripts/: compile.sh  release.sh
src/: CMakeLists.txt  main.cpp
src/charts/: abstractchart.cpp  abstractchart.h  barchart.cpp  barchart.h  chartfactory.cpp  chartfactory.h  linechart.cpp  linechart.h  scatterchart.cpp  scatterchart.h  splinechart.cpp  splinechart.h  xychart.cpp  xychart.h
src/models/: chartdatamodel.cpp  chartdatamodel.h
src/utils/: exceptions.h  themeableaction.cpp  themeableaction.h  themes.cpp  themes.h  vector2d.h
src/views/: mainview.cpp  mainview.h
src/windows/: editchartdialog.cpp  editchartdialog.h  editcolorsdialog.cpp  editcolorsdialog.h  mainwindow.cpp  mainwindow.h
src/windows/wizard/: chartwizard.cpp  chartwizard.h  detailspage.cpp  detailspage.h  intropage.cpp  intropage.h  newpage.cpp  newpage.h  openpage.cpp  openpage.h
test/: CMakeLists.txt
test/serialization/: model_serialization_test.cpp
test/utils/: vector2d_test.cpp
